# pyproject.toml
[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4", "briefcase"]

[tool.setuptools_scm]
write_to = "brieftest/_version.py"

[tool.briefcase]
project_name = "brieftest"
bundle = "com.example"
version = "0.0.1"
url = "https://example.com/brieftest"
license = "BSD license"
author = 'Jane Developer'
author_email = "jane@example.com"

[tool.briefcase.app.brieftest]
formal_name = "brieftest"
description = "My first application"
icon = "brieftest/resources/brieftest"
sources = ['brieftest']
requires = ['pyside2>=5.14.0', 'numpy']


[tool.briefcase.app.brieftest.macOS]
requires = []

[tool.briefcase.app.brieftest.linux]
requires = []
system_requires = []

[tool.briefcase.app.brieftest.windows]
requires = []

# Mobile deployments
[tool.briefcase.app.brieftest.iOS]
requires = []

[tool.briefcase.app.brieftest.android]
requires = []
